@@ -41,7 +41,7 @@ public class IsochroneResourceTest {
     }
 
     @ClassRule
-    public static final DropwizardAppRule<GraphHopperServerConfiguration> app = new DropwizardAppRule(
+    public static final DropwizardAppRule<GraphHopperServerConfiguration> app = new DropwizardAppRule<>(
             GraphHopperApplication.class, config);
 
     @AfterClass
@@ -92,28 +92,6 @@ public class IsochroneResourceTest {
 
         assertTrue(contains(polygon1, 42.558012, 1.589756));
         assertFalse(contains(polygon1, 42.53841, 1.635246));
-    }
-
-    @Test
-    public void requestPointList() {
-        Response rsp = app.client().target("http://localhost:8080/isochrone?point=42.531073,1.573792&time_limit=300&result=pointlist").request().buildGet().invoke();
-        Map map = rsp.readEntity(Map.class);
-        List<String> header = (List<String>) map.get("header");
-        assertEquals("[longitude, latitude, time, distance]", header.toString());
-        List<List> items = (List<List>) map.get("items");
-        List row = items.get(0);
-        assertEquals(1.5552, ((Number) row.get(0)).doubleValue(), 0.0001);
-        assertEquals(42.5179, ((Number) row.get(1)).doubleValue(), 0.0001);
-        assertEquals(118, ((Number) row.get(2)).intValue(), 1);
-        assertEquals(2263, ((Number) row.get(3)).intValue(), 1);
-
-        rsp = app.client().target("http://localhost:8080/isochrone?point=42.531073,1.573792&time_limit=300&result=pointlist&pointlist_ext_header=prev_time").request().buildGet().invoke();
-        map = rsp.readEntity(Map.class);
-        header = (List<String>) map.get("header");
-        int prevTimeIndex = header.indexOf("prev_time");
-        assertNotEquals(-1, prevTimeIndex);
-        items = (List) map.get("items");
-        assertEquals(115, ((Number) items.get(0).get(prevTimeIndex)).intValue(), 1);
     }
 
     @Test
